@@ -2,16 +2,14 @@ Function: rnfpolredabs
 Section: number_fields
 C-Name: rnfpolredabs
 Prototype: GGD0,L,
-Obsolete: 2013-12-28
-Help: rnfpolredabs(nf,pol,{flag=0}): given a pol with coefficients in nf,
- finds a relative simpler polynomial defining the same field. Binary digits
- of flag mean: 1: return also the element whose characteristic polynomial is
- the given polynomial, 2: return an absolute polynomial, 16: partial
- reduction.
-Doc: This function is obsolete: use \tet{rnfpolredbest} instead.
- Relative version of \kbd{polredabs}. Given a monic polynomial \var{pol}
- with coefficients in $\var{nf}$, finds a simpler relative polynomial defining
- the same field. The binary digits of $\fl$ mean
+Help: rnfpolredabs(nf,pol,{flag=0}): given an irreducible pol with coefficients
+ in nf, finds a canonical relative polynomial defining the same field.
+ Binary digits of flag mean: 1: return also the element whose characteristic
+ polynomial is the given polynomial, 2: return an absolute polynomial,
+ 16: partial reduction.
+Doc: Relative version of \kbd{polredabs}. Given an irreducible monic polynomial
+ \var{pol} with coefficients in $\var{nf}$, finds a canonical relative
+ polynomial defining the same field, hopefully with small coefficients.
 
  The binary digits of $\fl$ correspond to $1$: add information to convert
  elements to the new representation, $2$: absolute polynomial, instead of
