@@ -338,5 +338,5 @@ BID (nogen)
 
 MF
 .mod: t^2 + t + 1
-.mod: Mod(1, t^2 + t + 1)*y^2 + Mod(2*t + 2, t^2 + t + 1)
-Total time spent: 106
+.mod: Mod(1, t^2 + t + 1)*y^2 + Mod(-2*t, t^2 + t + 1)
+Total time spent: 100
