@@ -129,9 +129,9 @@ d(-169*t + 1, t^2 + 1), Mod(53*t - 195, t^2 + 1), Mod(-9*t + 1, t^2 + 1)]
 8 - 98150907904*y^16 - 554788978688*y^14 + 905164357632*y^12 + 6626275544268
 8*y^10 + 13743895347200*y^8 - 2146246697418752*y^6 - 6192449487634432*y^4 + 
 18014398509481984*y^2 + 1152921504606846976]
-[y, y^2 + Mod(2*t + 2, t^2 + t + 1), y^5 + Mod(t + 1, t^2 + t + 1)*y^4 + Mod
-(-37*t, t^2 + t + 1)*y^3 + 21*y^2 + Mod(-288*t - 288, t^2 + t + 1)*y + Mod(6
-4*t, t^2 + t + 1)]
+[y, y^2 + Mod(-2*t, t^2 + t + 1), y^5 + Mod(t + 1, t^2 + t + 1)*y^4 + Mod(-3
+7*t, t^2 + t + 1)*y^3 + 21*y^2 + Mod(-288*t - 288, t^2 + t + 1)*y + Mod(64*t
+, t^2 + t + 1)]
 [1, 1]
 1
 [[2, Mod(22, 23), 1, 0], [22, Mod(5, 23), 1, 0]]
@@ -1480,4 +1480,4 @@ t, -6*t - 4, t + 2]
   ***   at top-level: ...([1,0]);F=mfbasis(mf)[1];mfsymbol(mf,F)
   ***                                             ^--------------
   *** mfsymbol: sorry, mfsymbol when k <= 1 is not yet implemented.
-Total time spent: 6241
+Total time spent: 7173
