@@ -70,3 +70,6 @@ polredabs(x^15-15*x^13-2*x^12+78*x^11-10*x^10-393*x^9+81*x^8+939*x^7-373*x^6-822
 f=x^23-4324*x^21-6486*x^20+5382299*x^19-23233933*x^18-2724444300*x^17+29686323629*x^16+512000507352*x^15-10294412120640*x^14+6885232378569*x^13+1102283075184770*x^12-8796561210816172*x^11-7798660667836453*x^10+474243077814357335*x^9-2826995282155771181*x^8+5949260040976823570*x^7+9167317157190582864*x^6-81864894718917833350*x^5+204445625295748936871*x^4-269173314235796280477*x^3+199912058984322799237*x^2-78929282232647458634*x+12862216057817467245;
 polredabs(f)==f
 
+K=nfinit(z^4 + 50*z^2 + 45);
+u=rnfpolredabs(K,x^4 - 6*x^2 - 5*x - 1)
+rnfpolredabs(K,u)
